change props type and add bulk api
