# src/main/resources/swagger/openapi.yaml
@@ -80,8 +80,7 @@ paths:
           description: ID of user to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: successful operation
@@ -105,8 +104,7 @@ paths:
           description: ID of user to update
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       requestBody:
         description: Updated user object
         content:
@@ -130,8 +128,7 @@ paths:
           description: ID of user to delete
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '400':
           description: Invalid user supplied
@@ -236,8 +233,7 @@ paths:
           description: ID of profile to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: successful operation
@@ -261,8 +257,7 @@ paths:
           description: ID of profile to update
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       requestBody:
         description: Updated profile object
         content:
@@ -286,8 +281,7 @@ paths:
           description: ID of profile to delete
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '400':
           description: Invalid profile supplied
@@ -345,8 +339,7 @@ paths:
           description: ID of movie to return
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '200':
           description: successful operation
@@ -370,8 +363,7 @@ paths:
           description: ID of movie to update
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       requestBody:
         description: Updated movie object
         content:
@@ -395,8 +387,7 @@ paths:
           description: ID of movie to delete
           required: true
           schema:
-            type: integer
-            format: int64
+            type: string
       responses:
         '400':
           description: Invalid movie supplied
@@ -480,8 +471,7 @@ components:
       type: object
       properties:
         id:
-          type: integer
-          format: int64
+          type: string
           example: 1001
         title:
           type: string
@@ -514,7 +504,7 @@ components:
         plot:
           type: string
           example: 'this is plot'
-        language:
+        languages:
           type: string
           example: 'EN, VI'
         country:
@@ -544,8 +534,10 @@ components:
           type: boolean
           example: true
         images:
-          type: string
-          example: 'image1.png, image2.png'
+          type: array
+          items:
+            type: string
+          example: ['image1.png', 'image2.png']
       xml:
         name: movie
 
@@ -567,7 +559,7 @@ components:
         name: '##default'
   requestBodies:
     Movie:
-      description: Pet object that needs to be added to the store
+      description: Movie object
       content:
         application/json:
           schema:
@@ -584,7 +576,7 @@ components:
             items:
               $ref: '#/components/schemas/User'
   securitySchemes:
-    petstore_auth:
+    netfliz_auth:
       type: oauth2
       flows:
         implicit:
